[package]
name = "ipstats"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
clap = { version = "3.2.18", features = ["derive"] }
dns-lookup = "1.0.8"
flate2 = "1.0.24"
regex = "1.6.0"
strfmt = "0.2.2"
tree_magic_mini = "3.0.3"
